BaSP-W03-2022: change ubication of assets, add Semana-03 folder with index, style and reset, give some style to the header

--- a/Semana-02/index.html
+++ b/Semana-02/index.html
@@ -12,12 +12,12 @@
   <header>
     <div>
       <figure>
-        <img src="../Semana-02/assets/img/menu.png" alt="" />
+        <img src="../assets/img/menu.png" alt="" />
       </figure>
       <div>
         <form>
           <figure>
-            <img src="../Semana-02/assets/img/search.png" alt="" />
+            <img src="../assets/img/search.png" alt="" />
           </figure>
           <input type="search" name="search" />
         </form>
@@ -67,27 +67,27 @@
       <a href="#" target="_blank"><button type="button">LEARN MORE</button></a>
     </div>
     <div>
-      <img src="../Semana-02/assets/img/Imagen_principal.png" alt="" />
+      <img src="../assets/img/Imagen_principal.png" alt="" />
     </div>
   </section>
   <section>
     <h2>Features</h2>
     <div>
       <figure>
-        <img src="../Semana-02/assets/img/features.png" alt="">
+        <img src="../assets/img/features.png" alt="">
       </figure>
     </div>
     <div>
       <a href="#">
         <figure>
-          <img src="../Semana-02/assets/img/clock.png" alt="" />
+          <img src="../assets/img/clock.png" alt="" />
         </figure>
         <p>Hours log</p>
       </a>
       <div>
         <a href="#">
           <figure>
-            <img src="../Semana-02/assets/img/Vector.png" alt="" />
+            <img src="../assets/img/Vector.png" alt="" />
           </figure>
           <p>Reports</p>
         </a>
@@ -95,7 +95,7 @@
       <div>
         <a href="#">
           <figure>
-            <img src="../Semana-02/assets/img/search.png" alt="" />
+            <img src="../assets/img/search.png" alt="" />
           </figure>
           <p>Resource management</p>
         </a>
@@ -103,7 +103,7 @@
       <div>
         <a href="#">
           <figure>
-            <img src="../Semana-02/assets/img/people.png" alt="" />
+            <img src="../assets/img/people.png" alt="" />
           </figure>
           <p>Multiple role</p>
         </a>
@@ -113,7 +113,7 @@
   <section>
     <h2>Why use Trackgenix?</h2>
     <figure>
-      <img src="../Semana-02/assets/img/why_use.png" alt="" />
+      <img src="../assets/img/why_use.png" alt="" />
     </figure>
     <div>
       <ul>
@@ -153,7 +153,7 @@
       </p>
       <a href="#" target="_blank"><button type="button">Read More</button></a>
       <figure>
-        <img src="../Semana-02/assets/img/history2.png" alt="">
+        <img src="../assets/img/history2.png" alt="">
       </figure>
       <p>
         GigaTech was created in 2012 by a
@@ -162,7 +162,7 @@
         themselves.
       </p>
       <figure>
-        <img src="../Semana-02/assets/img/history.png" alt="" />
+        <img src="../assets/img/history.png" alt="" />
       </figure>
     </div>
   </section>
@@ -237,27 +237,27 @@
     <div>
       <a href="#" target="_blank">
         <figure>
-          <img src="../Semana-02/assets/img/twitter.png" alt="">
+          <img src="../assets/img/twitter.png" alt="">
         </figure>
       </a>
       <a href="#" target="_blank">
         <figure>
-          <img src="../Semana-02/assets/img/face.png" alt="">
+          <img src="../assets/img/face.png" alt="">
         </figure>
       </a>
       <a href="#" target="_blank">
         <figure>
-          <img src="../Semana-02/assets/img/linkedin.png" alt="">
+          <img src="../assets/img/linkedin.png" alt="">
         </figure>
       </a>
       <a href="#" target="_blank">
         <figure>
-          <img src="../Semana-02/assets/img/instagram.png" alt="">
+          <img src="../assets/img/instagram.png" alt="">
         </figure>
       </a>
       <a href="#" target="_blank">
         <figure>
-          <img src="../Semana-02/assets/img/github.png" alt="">
+          <img src="../assets/img/github.png" alt="">
         </figure>
       </a>
     </div>
