BaSP-W03-2022: finish the sidebar and work on the first-section of the body

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -25,39 +25,45 @@
   <nav>
     <h2 class="nav-menu">Menu</h2>
     <div class="nav-menu-underline"></div>
-<ul class="nav-ul">
-  <li>
-    <a href="#"> Home</a>
-  </li>
-  <div></div>
-  <li>
-    <a href="#">SignUp</a>
-  </li>
-  <div></div>
-  <li>
-    <a href="#">Login</a>
-  </li>
-  <div></div>
-</ul>
-      <h2>Contact</h2>
-
-      <!-- <figure>
-        <img src="../assets/img/mail.png" alt="" />
-      </figure>
-      <a href="#" target="_blank">trackgenix@gmail.com</a>
-      <figure>
-        <img src="../assets/img/phone.png" alt="" />
-      </figure>
-      <a href="#" target="_blank">(+54) 4545-9999</a>
-      <figure>
-        <img src="../assets/img/adress.png" alt="" />
-      </figure>
-      <a href="#" target="_blank">1234 Somewhere Road #8254 Nashville.</a>
-    </div> -->
+    <ul class="nav-menu-ul">
+      <li>
+        <a href="#"> Home</a>
+      </li>
+      <div></div>
+      <li>
+        <a href="#">SignUp</a>
+      </li>
+      <div></div>
+      <li>
+        <a href="#">Login</a>
+      </li>
+      <div></div>
+    </ul>
+    <ul class="nav-contact-ul">
+      <h2 class="nav-contact">Contact</h2>
+      <div class="nav-contact-underline"></div>
+      <li>
+        <figure>
+          <img src="../assets/img/mail.png" alt="" />
+        </figure>
+        <a href="#" target="_blank">trackgenix@gmail.com</a>
+      </li>
+      <li>
+        <figure>
+          <img src="../assets/img/phone.png" alt="" />
+        </figure>
+        <a href="#" target="_blank">(+54) 4545-9999</a>
+      </li>
+      <li id="nav-contact-address">
+        <figure>
+          <img src="../assets/img/adress.png" alt="" />
+        </figure>
+        <a id="contact-address" href="#" target="_blank">1234 Somewhere Road #8254 Nashville.</a>
+      </li>
+    </ul>
   </nav>
-  <!-- <main>
-    <section>
-      <div>
+  <main>
+    <section class="first-section">
         <h1>TRACKGENIX</h1>
         <h2>TIME CONTROL THAT SIMPLIFIES YOUR BUSINESS</h2>
         <p>
@@ -65,10 +71,9 @@
           easiest, fastest and most intuitive way.
         </p>
         <a href="#" target="_blank"><button type="button">LEARN MORE</button></a>
-      </div>
-      <div>
+      <figure>
         <img src="../assets/img/Imagen_principal.png" alt="" />
-      </div>
+      </figure>
     </section>
     <section>
       <h2>Features</h2>
@@ -233,8 +238,8 @@
         </div>
       </div>
     </section>
-  </main> 
-    <footer>
+  </main>
+  <footer>
     <div>
       <a href="#" target="_blank">
         <figure>
@@ -267,7 +272,7 @@
       <p>Copyright &#169 GigaTech Software Solutions SA.</p>
       <P>All rights reserved.</P>
     </div>
-  </footer>-->
+  </footer>
 </body>
 
 </html>
