BaSP-W03-2022: finish the first, second and third section of the body

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -64,32 +64,33 @@
   </nav>
   <main>
     <section class="first-section">
-        <h1>TRACKGENIX</h1>
-        <h2>TIME CONTROL THAT SIMPLIFIES YOUR BUSINESS</h2>
-        <p>
-          The time control software to manage your employees' time in the
-          easiest, fastest and most intuitive way.
-        </p>
-        <a href="#" target="_blank"><button type="button">LEARN MORE</button></a>
+      <h1>TRACKGENIX</h1>
+      <h2>TIME CONTROL THAT SIMPLIFIES YOUR BUSINESS</h2>
+      <p>
+        The time control software to manage your employees' time in the
+        easiest, fastest and most intuitive way.
+      </p>
+      <a href="#" target="_blank"><button type="button">LEARN MORE</button></a>
       <figure>
         <img src="../assets/img/Imagen_principal.png" alt="" />
       </figure>
     </section>
-    <section>
+    <section class="second-section">
       <h2>Features</h2>
-      <div>
-        <figure>
-          <img src="../assets/img/features.png" alt="">
-        </figure>
-      </div>
-      <div>
-        <a href="#">
-          <figure>
-            <img src="../assets/img/clock.png" alt="" />
-          </figure>
-          <p>Hours log</p>
-        </a>
-        <div>
+      <div class="features-underline"></div>
+      <figure class="features-img-tablet">
+        <img src="../assets/img/features.png" alt="">
+      </figure>
+      <div class="features-blocks">
+        <div class="features-hours">
+          <a href="#">
+            <figure>
+              <img src="../assets/img/clock.png" alt="" />
+            </figure>
+            <p>Hours log</p>
+          </a>
+        </div>
+        <div class="features-reports">
           <a href="#">
             <figure>
               <img src="../assets/img/Vector.png" alt="" />
@@ -97,7 +98,9 @@
             <p>Reports</p>
           </a>
         </div>
-        <div>
+      </div>
+      <div class="features-blocks">
+        <div class="features-resource">
           <a href="#">
             <figure>
               <img src="../assets/img/search.png" alt="" />
@@ -105,7 +108,7 @@
             <p>Resource management</p>
           </a>
         </div>
-        <div>
+        <div class="features-role">
           <a href="#">
             <figure>
               <img src="../assets/img/people.png" alt="" />
@@ -115,21 +118,23 @@
         </div>
       </div>
     </section>
-    <section>
+    <section class="third-section">
       <h2>Why use Trackgenix?</h2>
-      <figure>
-        <img src="../assets/img/why_use.png" alt="" />
-      </figure>
-      <div>
-        <ul>
-          <li><a href="#">Productivity booster</a></li>
-          <li><a href="#">Work traceability</a></li>
-          <li><a href="#">Leadership and team management</a></li>
-          <li><a href="#">Decisionmaking</a></li>
-        </ul>
+      <div class="why-underline"></div>
+      <div></div>
+      <div class="why-info">
+        <figure>
+          <img src="../assets/img/why_use.png" alt="" />
+        </figure>
+          <ul>
+            <li><a href="#">Productivity booster</a></li>
+            <li><a href="#">Work traceability</a></li>
+            <li><a href="#">Leadership and team management</a></li>
+            <li><a href="#">Decisionmaking</a></li>
+          </ul>
       </div>
     </section>
-    <section>
+    <section class="fourth-section">
       <h2>Ask for more information</h2>
       <div>
         <form action="#">
