BaSP-W03-2022: finish the fouth section of the body

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -135,8 +135,8 @@
       </div>
     </section>
     <section class="fourth-section">
-      <h2>Ask for more information</h2>
-      <div>
+      <h2>Ask for more information:</h2>
+      <div class="info-underline"></div>
         <form action="#">
           <input type="text" name="name" placeholder="Name" required />
           <input type="email" name="email" placeholder="Email" required />
@@ -146,12 +146,12 @@
             <option value="2">Employee PM</option>
             <option value="2">Admin</option>
             <option value="2">SuperAdmin</option>
+            <i></i>
           </select>
           <textarea name="text" cols="30" rows="10" placeholder="Message" required></textarea>
-          <input type="reset" value="Cancel" />
           <input type="submit" value="Send" />
+          <input type="reset" value="Cancel" />
         </form>
-      </div>
     </section>
     <section>
       <h2>Our history</h2>
