BaSP-W03-2022: work on the fifth section and finish it

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -153,28 +153,29 @@
           <input type="reset" value="Cancel" />
         </form>
     </section>
-    <section>
+    <section class="fifth-section">
       <h2>Our history</h2>
-      <div>
+      <div class="history-underline"></div>
+      <div class="history-text">
         <p>
           Since 2012, we’ve helped countless companies across the globe build
           applications that empower growth, leave a lasting impression, and
           transform their user experience.
-        </p>
-        <a href="#" target="_blank"><button type="button">Read More</button></a>
-        <figure>
-          <img src="../assets/img/history2.png" alt="">
-        </figure>
-        <p>
+          </p>
+          <p>
           GigaTech was created in 2012 by a
           trio of colleagues who met through a coding bootcamp. They continue
           to perfect the craft of app development and make a name for
           themselves.
         </p>
-        <figure>
+      </div>
+        <a href="#" target="_blank"><button type="button">Read More</button></a>
+        <figure class="history-img-desc">
+          <img src="../assets/img/history2.png" alt="">
+        </figure>
+        <figure class="history-img">
           <img src="../assets/img/history.png" alt="" />
         </figure>
-      </div>
     </section>
     <section>
       <div>
