BaSP-W03-2022: finish with the sixth section

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -126,32 +126,32 @@
         <figure>
           <img src="../assets/img/why_use.png" alt="" />
         </figure>
-          <ul>
-            <li><a href="#">Productivity booster</a></li>
-            <li><a href="#">Work traceability</a></li>
-            <li><a href="#">Leadership and team management</a></li>
-            <li><a href="#">Decisionmaking</a></li>
-          </ul>
+        <ul>
+          <li><a href="#">Productivity booster</a></li>
+          <li><a href="#">Work traceability</a></li>
+          <li><a href="#">Leadership and team management</a></li>
+          <li><a href="#">Decisionmaking</a></li>
+        </ul>
       </div>
     </section>
     <section class="fourth-section">
       <h2>Ask for more information:</h2>
       <div class="info-underline"></div>
-        <form action="#">
-          <input type="text" name="name" placeholder="Name" required />
-          <input type="email" name="email" placeholder="Email" required />
-          <select name="category" required>
-            <option value="0" disabled selected>-Category-</option>
-            <option value="1">Employee</option>
-            <option value="2">Employee PM</option>
-            <option value="2">Admin</option>
-            <option value="2">SuperAdmin</option>
-            <i></i>
-          </select>
-          <textarea name="text" cols="30" rows="10" placeholder="Message" required></textarea>
-          <input type="submit" value="Send" />
-          <input type="reset" value="Cancel" />
-        </form>
+      <form action="#">
+        <input type="text" name="name" placeholder="Name" required />
+        <input type="email" name="email" placeholder="Email" required />
+        <select name="category" required>
+          <option value="0" disabled selected>-Category-</option>
+          <option value="1">Employee</option>
+          <option value="2">Employee PM</option>
+          <option value="2">Admin</option>
+          <option value="2">SuperAdmin</option>
+          <i></i>
+        </select>
+        <textarea name="text" cols="30" rows="10" placeholder="Message" required></textarea>
+        <input type="submit" value="Send" />
+        <input type="reset" value="Cancel" />
+      </form>
     </section>
     <section class="fifth-section">
       <h2>Our history</h2>
@@ -161,87 +161,75 @@
           Since 2012, we’ve helped countless companies across the globe build
           applications that empower growth, leave a lasting impression, and
           transform their user experience.
-          </p>
-          <p>
+        </p>
+        <p>
           GigaTech was created in 2012 by a
           trio of colleagues who met through a coding bootcamp. They continue
           to perfect the craft of app development and make a name for
           themselves.
         </p>
       </div>
-        <a href="#" target="_blank"><button type="button">Read More</button></a>
-        <figure class="history-img-desc">
-          <img src="../assets/img/history2.png" alt="">
-        </figure>
-        <figure class="history-img">
-          <img src="../assets/img/history.png" alt="" />
-        </figure>
+      <a href="#" target="_blank"><button type="button">Read More</button></a>
+      <figure class="history-img-desc">
+        <img src="../assets/img/history2.png" alt="">
+      </figure>
+      <figure class="history-img">
+        <img src="../assets/img/history.png" alt="" />
+      </figure>
     </section>
-    <section>
-      <div>
-        <div>
-          <h3>Products</h3>
-          <ul>
-            <li>
-              <ul>
-                <a href="#">
-                  <li>Features</li>
-                </a>
-                <a href="#">
-                  <li>Downloads</li>
-                </a>
-                <a href="#">
-                  <li>Integrations</li>
-                </a>
-                <a href="#">
-                  <li>Additional features</li>
-                </a>
-              </ul>
-            </li>
-          </ul>
-        </div>
-        <div>
-          <h3>Company</h3>
-          <ul>
-            <li>
-              <ul>
-                <a href="#">
-                  <li>About us</li>
-                </a>
-                <a href="#">
-                  <li>Trusted by</li>
-                </a>
-                <a href="#">
-                  <li>Resources</li>
-                </a>
-                <a href="#">
-                  <li>Clients</li>
-                </a>
-              </ul>
-            </li>
-          </ul>
-        </div>
-        <div>
-          <h3>Support</h3>
-          <ul>
-            <li>
-              <ul>
-                <a href="#">
-                  <li>Help</li>
-                </a>
-                <a href="#">
-                  <li>Tutorial</li>
-                </a>
-                <a href="#">
-                  <li>API</li>
-                </a>
-                <a href="#">
-                  <li>Contact</li>
-                </a>
-              </ul>
-            </li>
-          </ul>
-        </div>
+    <section class="sixth-section">
+      <div class="sixth-section-parts">
+        <h3>PRODUCTS</h3>
+        <ul>
+          <li>
+            <a href="#">Features</a>
+          </li>
+          <li>
+            <a href="#">Downloads</a>
+          </li>
+          <li>
+            <a href="#">integrations</a>
+          </li>
+          <li>
+            <a href="#">Additional features</a>
+          </li>
+        </ul>
+      </div>
+      <div class="sixth-section-vertical"></div>
+      <div class="sixth-section-parts">
+        <h3>COMPANY</h3>
+        <ul>
+          <li>
+            <a href="#">About us</a>
+          </li>
+          <li>
+            <a href="#">Trusted by</a>
+          </li>
+          <li>
+            <a href="#">Resources<a>
+          </li>
+          <li>
+            <a href="#">Clients</a>
+          </li>
+        </ul>
+      </div>
+      <div class="sixth-section-vertical"></div>
+      <div class="sixth-section-parts">
+        <h3>SUPPORT</h3>
+        <ul>
+          <li>
+            <a href="#">Help</a>
+          </li>
+          <li>
+            <a href="#">Tutorial</a>
+          </li>
+          <li>
+            <a href="#">API</a>
+          </li>
+          <li>
+            <a href="#">Contact</a>
+          </li>
+        </ul>
       </div>
     </section>
   </main>
