BaSP-W03-2022: finish with the footer

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -234,36 +234,36 @@
     </section>
   </main>
   <footer>
-    <div>
+    <div class="footer-socials">
+      <figure>
       <a href="#" target="_blank">
-        <figure>
           <img src="../assets/img/twitter.png" alt="">
-        </figure>
-      </a>
+        </a>
+      </figure>
+      <figure>
       <a href="#" target="_blank">
-        <figure>
           <img src="../assets/img/face.png" alt="">
-        </figure>
-      </a>
+        </a>
+      </figure>
+      <figure>
       <a href="#" target="_blank">
-        <figure>
           <img src="../assets/img/linkedin.png" alt="">
-        </figure>
-      </a>
+        </a>
+      </figure>
+      <figure>
       <a href="#" target="_blank">
-        <figure>
           <img src="../assets/img/instagram.png" alt="">
-        </figure>
-      </a>
+        </a>
+      </figure>
+      <figure>
       <a href="#" target="_blank">
-        <figure>
           <img src="../assets/img/github.png" alt="">
-        </figure>
-      </a>
+        </a>
+      </figure>
     </div>
-    <div>
+    <div class="footer-info">
       <p>Rosario, Argentina</p>
-      <p>Copyright &#169 GigaTech Software Solutions SA.</p>
+      <p>Copyright &#169 2022 GigaTech Software Solutions SA.</p>
       <P>All rights reserved.</P>
     </div>
   </footer>
