BaSP-W03-2022: update of the README adn fix some errors on the CSS

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -64,13 +64,15 @@
   </nav>
   <main>
     <section class="first-section">
-      <h1>TRACKGENIX</h1>
-      <h2>TIME CONTROL THAT SIMPLIFIES YOUR BUSINESS</h2>
-      <p>
-        The time control software to manage your employees' time in the
-        easiest, fastest and most intuitive way.
-      </p>
-      <a href="#" target="_blank"><button type="button">LEARN MORE</button></a>
+      <div>
+        <h1>TRACKGENIX</h1>
+        <h2>TIME CONTROL THAT SIMPLIFIES YOUR BUSINESS</h2>
+        <p>
+          The time control software to manage your employees' time in the
+          easiest, fastest and most intuitive way.
+        </p>
+        <a href="#" target="_blank"><button type="button">LEARN MORE</button></a>
+      </div>
       <figure>
         <img src="../assets/img/Imagen_principal.png" alt="" />
       </figure>
@@ -232,41 +234,41 @@
         </ul>
       </div>
     </section>
+    <footer>
+      <div class="footer-socials">
+        <figure>
+        <a href="#" target="_blank">
+            <img src="../assets/img/twitter.png" alt="">
+          </a>
+        </figure>
+        <figure>
+        <a href="#" target="_blank">
+            <img src="../assets/img/face.png" alt="">
+          </a>
+        </figure>
+        <figure>
+        <a href="#" target="_blank">
+            <img src="../assets/img/linkedin.png" alt="">
+          </a>
+        </figure>
+        <figure>
+        <a href="#" target="_blank">
+            <img src="../assets/img/instagram.png" alt="">
+          </a>
+        </figure>
+        <figure>
+        <a href="#" target="_blank">
+            <img src="../assets/img/github.png" alt="">
+          </a>
+        </figure>
+      </div>
+      <div class="footer-info">
+        <p>Rosario, Argentina</p>
+        <p>Copyright &#169 2022 GigaTech Software Solutions SA.</p>
+        <P>All rights reserved.</P>
+      </div>
+    </footer>
   </main>
-  <footer>
-    <div class="footer-socials">
-      <figure>
-      <a href="#" target="_blank">
-          <img src="../assets/img/twitter.png" alt="">
-        </a>
-      </figure>
-      <figure>
-      <a href="#" target="_blank">
-          <img src="../assets/img/face.png" alt="">
-        </a>
-      </figure>
-      <figure>
-      <a href="#" target="_blank">
-          <img src="../assets/img/linkedin.png" alt="">
-        </a>
-      </figure>
-      <figure>
-      <a href="#" target="_blank">
-          <img src="../assets/img/instagram.png" alt="">
-        </a>
-      </figure>
-      <figure>
-      <a href="#" target="_blank">
-          <img src="../assets/img/github.png" alt="">
-        </a>
-      </figure>
-    </div>
-    <div class="footer-info">
-      <p>Rosario, Argentina</p>
-      <p>Copyright &#169 2022 GigaTech Software Solutions SA.</p>
-      <P>All rights reserved.</P>
-    </div>
-  </footer>
 </body>
 
 </html>
