--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" href="style.css" type="text/css">
+  <link rel="stylesheet" href="header.css" type="text/css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <title>Landing Page Trackgenix</title>
 </head>
@@ -17,10 +17,9 @@
       <img class="menu" src="../assets/img/menu.png" alt="" />
     </figure>
     <form action="" class="header-search">
-      <input type="search" name="search" />
       <img class="header-search-img" src="../assets/img/search.png" alt="">
+      <input type="search" name="search" />
     </form>
-    <button type="button" class="header-know-more-btn">Know more</button>
   </header>
   <nav>
     <h2 class="nav-menu">Menu</h2>
