--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -6,8 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="body.css" type="text/css">
   <link rel="stylesheet" href="header.css" type="text/css">
   <link rel="stylesheet" href="sidebar.css" type="text/css">
+  <link rel="stylesheet" href="trackgenix.css" type="text/css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <title>Landing Page Trackgenix</title>
 </head>
@@ -64,15 +66,13 @@
   </nav>
   <main>
     <section class="first-section">
-      <div>
         <h1>TRACKGENIX</h1>
-        <h2>TIME CONTROL THAT SIMPLIFIES YOUR BUSINESS</h2>
+        <h2>Time control that simplifies your business</h2>
         <p>
           The time control software to manage your employees' time in the
           easiest, fastest and most intuitive way.
         </p>
         <a href="#" target="_blank"><button type="button">LEARN MORE</button></a>
-      </div>
       <figure>
         <img src="../assets/img/Imagen_principal.png" alt="" />
       </figure>
