BaSP-W04-2022: create features.css and give some style

--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="header.css" type="text/css">
   <link rel="stylesheet" href="sidebar.css" type="text/css">
   <link rel="stylesheet" href="trackgenix.css" type="text/css">
+  <link rel="stylesheet" href="features.css" type="text/css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <title>Landing Page Trackgenix</title>
 </head>
@@ -66,23 +67,19 @@
   </nav>
   <main>
     <section class="first-section">
-        <h1>TRACKGENIX</h1>
-        <h2>Time control that simplifies your business</h2>
-        <p>
-          The time control software to manage your employees' time in the
-          easiest, fastest and most intuitive way.
-        </p>
-        <a href="#" target="_blank"><button type="button">LEARN MORE</button></a>
+      <h1>TRACKGENIX</h1>
+      <h2>Time control that simplifies your business</h2>
+      <p>
+        The time control software to manage your employees' time in the
+        easiest, fastest and most intuitive way.
+      </p>
+      <a href="#" target="_blank"><button type="button">LEARN MORE</button></a>
       <figure>
         <img src="../assets/img/Imagen_principal.png" alt="" />
       </figure>
     </section>
     <section class="second-section">
       <h2>Features</h2>
-      <div class="features-underline"></div>
-      <figure class="features-img-tablet">
-        <img src="../assets/img/features.png" alt="">
-      </figure>
       <div class="features-blocks">
         <div class="features-hours">
           <a href="#">
@@ -100,8 +97,6 @@
             <p>Reports</p>
           </a>
         </div>
-      </div>
-      <div class="features-blocks">
         <div class="features-resource">
           <a href="#">
             <figure>
@@ -237,27 +232,27 @@
     <footer>
       <div class="footer-socials">
         <figure>
-        <a href="#" target="_blank">
+          <a href="#" target="_blank">
             <img src="../assets/img/twitter.png" alt="">
           </a>
         </figure>
         <figure>
-        <a href="#" target="_blank">
+          <a href="#" target="_blank">
             <img src="../assets/img/face.png" alt="">
           </a>
         </figure>
         <figure>
-        <a href="#" target="_blank">
+          <a href="#" target="_blank">
             <img src="../assets/img/linkedin.png" alt="">
           </a>
         </figure>
         <figure>
-        <a href="#" target="_blank">
+          <a href="#" target="_blank">
             <img src="../assets/img/instagram.png" alt="">
           </a>
         </figure>
         <figure>
-        <a href="#" target="_blank">
+          <a href="#" target="_blank">
             <img src="../assets/img/github.png" alt="">
           </a>
         </figure>
