BaSP-W04-2022: create why-use.css and give some style

--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="sidebar.css" type="text/css">
   <link rel="stylesheet" href="trackgenix.css" type="text/css">
   <link rel="stylesheet" href="features.css" type="text/css">
+  <link rel="stylesheet" href="why-use.css" type="text/css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <title>Landing Page Trackgenix</title>
 </head>
@@ -117,8 +118,6 @@
     </section>
     <section class="third-section">
       <h2>Why use Trackgenix?</h2>
-      <div class="why-underline"></div>
-      <div></div>
       <div class="why-info">
         <figure>
           <img src="../assets/img/why_use.png" alt="" />
