--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="trackgenix.css" type="text/css">
   <link rel="stylesheet" href="features.css" type="text/css">
   <link rel="stylesheet" href="why-use.css" type="text/css">
+  <link rel="stylesheet" href="ask-for.css" type="text/css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <title>Landing Page Trackgenix</title>
 </head>
@@ -137,16 +138,18 @@
         <input type="text" name="name" placeholder="Name" required />
         <input type="email" name="email" placeholder="Email" required />
         <select name="category" required>
-          <option value="0" disabled selected>-Category-</option>
+          <option value="0" disabled selected>Category</option>
           <option value="1">Employee</option>
           <option value="2">Employee PM</option>
           <option value="2">Admin</option>
           <option value="2">SuperAdmin</option>
           <i></i>
-        </select>
+        </select> 
         <textarea name="text" cols="30" rows="10" placeholder="Message" required></textarea>
-        <input type="submit" value="Send" />
-        <input type="reset" value="Cancel" />
+        <div class="buttons">
+          <input type="reset" value="Cancel" />
+          <input type="submit" value="Send" />
+        </div>
       </form>
     </section>
     <section class="fifth-section">
