--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -13,6 +13,8 @@
   <link rel="stylesheet" href="features.css" type="text/css">
   <link rel="stylesheet" href="why-use.css" type="text/css">
   <link rel="stylesheet" href="ask-for.css" type="text/css">
+  <link rel="stylesheet" href="our-history.css" type="text/css">
+
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <title>Landing Page Trackgenix</title>
 </head>
@@ -144,7 +146,7 @@
           <option value="2">Admin</option>
           <option value="2">SuperAdmin</option>
           <i></i>
-        </select> 
+        </select>
         <textarea name="text" cols="30" rows="10" placeholder="Message" required></textarea>
         <div class="buttons">
           <input type="reset" value="Cancel" />
@@ -154,24 +156,24 @@
     </section>
     <section class="fifth-section">
       <h2>Our history</h2>
-      <div class="history-underline"></div>
-      <div class="history-text">
+      <div>
         <p>
           Since 2012, we’ve helped countless companies across the globe build
           applications that empower growth, leave a lasting impression, and
           transform their user experience.
-        </p>
-        <p>
+          </p>
+          <p>
           GigaTech was created in 2012 by a
           trio of colleagues who met through a coding bootcamp. They continue
           to perfect the craft of app development and make a name for
           themselves.
-        </p>
+          </p>
+          <p>
+            As the team grew from three to ten, and then from ten to twenty, they explored new partnerships with
+            major technologies to propel their growth. GigaTech currently has around 70 team members and exciting growth
+            goals ahead of them.
+          </p>
       </div>
-      <a href="#" target="_blank"><button type="button">Read More</button></a>
-      <figure class="history-img-desc">
-        <img src="../assets/img/history2.png" alt="">
-      </figure>
       <figure class="history-img">
         <img src="../assets/img/history.png" alt="" />
       </figure>
