BaSP-W04-2022: create products and give some style, fix some errors in why-use, header and features

--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="why-use.css" type="text/css">
   <link rel="stylesheet" href="ask-for.css" type="text/css">
   <link rel="stylesheet" href="our-history.css" type="text/css">
-
+  <link rel="stylesheet" href="products.css" type="text/css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <title>Landing Page Trackgenix</title>
 </head>
@@ -85,37 +85,41 @@
     <section class="second-section">
       <h2>Features</h2>
       <div class="features-blocks">
-        <div class="features-hours">
-          <a href="#">
-            <figure>
-              <img src="../assets/img/clock.png" alt="" />
-            </figure>
-            <p>Hours log</p>
-          </a>
+        <div class="features-group">
+          <div class="features-hours">
+            <a href="#">
+              <figure>
+                <img src="../assets/img/clock.png" alt="" />
+              </figure>
+              <p>Hours log</p>
+            </a>
+          </div>
+          <div class="features-reports">
+            <a href="#">
+              <figure>
+                <img src="../assets/img/Vector.png" alt="" />
+              </figure>
+              <p>Reports</p>
+            </a>
+          </div>
         </div>
-        <div class="features-reports">
-          <a href="#">
-            <figure>
-              <img src="../assets/img/Vector.png" alt="" />
-            </figure>
-            <p>Reports</p>
-          </a>
-        </div>
-        <div class="features-resource">
-          <a href="#">
-            <figure>
-              <img src="../assets/img/search.png" alt="" />
-            </figure>
-            <p>Resource management</p>
-          </a>
-        </div>
-        <div class="features-role">
-          <a href="#">
-            <figure>
-              <img src="../assets/img/people.png" alt="" />
-            </figure>
-            <p>Multiple role</p>
-          </a>
+        <div class="features-group">
+          <div class="features-resource">
+            <a href="#">
+              <figure>
+                <img src="../assets/img/search.png" alt="" />
+              </figure>
+              <p>Resource management</p>
+            </a>
+          </div>
+          <div class="features-role">
+            <a href="#">
+              <figure>
+                <img src="../assets/img/people.png" alt="" />
+              </figure>
+              <p>Multiple role</p>
+            </a>
+          </div>
         </div>
       </div>
     </section>
@@ -161,25 +165,25 @@
           Since 2012, we’ve helped countless companies across the globe build
           applications that empower growth, leave a lasting impression, and
           transform their user experience.
-          </p>
-          <p>
+        </p>
+        <p>
           GigaTech was created in 2012 by a
           trio of colleagues who met through a coding bootcamp. They continue
           to perfect the craft of app development and make a name for
           themselves.
-          </p>
-          <p>
-            As the team grew from three to ten, and then from ten to twenty, they explored new partnerships with
-            major technologies to propel their growth. GigaTech currently has around 70 team members and exciting growth
-            goals ahead of them.
-          </p>
+        </p>
+        <p>
+          As the team grew from three to ten, and then from ten to twenty, they explored new partnerships with
+          major technologies to propel their growth. GigaTech currently has around 70 team members and exciting growth
+          goals ahead of them.
+        </p>
       </div>
       <figure class="history-img">
         <img src="../assets/img/history.png" alt="" />
       </figure>
     </section>
     <section class="sixth-section">
-      <div class="sixth-section-parts">
+      <div class="sixth-section-parts product">
         <h3>PRODUCTS</h3>
         <ul>
           <li>
@@ -196,8 +200,7 @@
           </li>
         </ul>
       </div>
-      <div class="sixth-section-vertical"></div>
-      <div class="sixth-section-parts">
+      <div class="sixth-section-parts company">
         <h3>COMPANY</h3>
         <ul>
           <li>
@@ -214,8 +217,7 @@
           </li>
         </ul>
       </div>
-      <div class="sixth-section-vertical"></div>
-      <div class="sixth-section-parts">
+      <div>
         <h3>SUPPORT</h3>
         <ul>
           <li>
