BaSP-W04-2022: create footer.css and give some style

--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="ask-for.css" type="text/css">
   <link rel="stylesheet" href="our-history.css" type="text/css">
   <link rel="stylesheet" href="products.css" type="text/css">
+  <link rel="stylesheet" href="footer.css" type="text/css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <title>Landing Page Trackgenix</title>
 </head>
@@ -239,27 +240,27 @@
       <div class="footer-socials">
         <figure>
           <a href="#" target="_blank">
-            <img src="../assets/img/twitter.png" alt="">
+            <img class="twitter" src="../assets/img/twitter.png" alt="">
           </a>
         </figure>
         <figure>
           <a href="#" target="_blank">
-            <img src="../assets/img/face.png" alt="">
+            <img class="face" src="../assets/img/face.png" alt="">
           </a>
         </figure>
         <figure>
           <a href="#" target="_blank">
-            <img src="../assets/img/linkedin.png" alt="">
+            <img class="linkedin" src="../assets/img/linkedin.png" alt="">
           </a>
         </figure>
         <figure>
           <a href="#" target="_blank">
-            <img src="../assets/img/instagram.png" alt="">
+            <img class="instagram" src="../assets/img/instagram.png" alt="">
           </a>
         </figure>
         <figure>
           <a href="#" target="_blank">
-            <img src="../assets/img/github.png" alt="">
+            <img class="github" src="../assets/img/github.png" alt="">
           </a>
         </figure>
       </div>
